<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/task_btn_restore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:background="@null"
                android:drawableStart="@drawable/ic_baseline_restore_from_trash_24"
                android:drawablePadding="0dp"
                android:text="@string/task_btn_restore_text"
                android:textAllCaps="false"
                android:textColor="?attr/colorAccent"
                app:layout_constraintBaseline_toBaselineOf="@id/task_btn_delete"
                app:layout_constraintEnd_toStartOf="@+id/task_btn_delete" />

            <Button
                android:id="@+id/task_btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@null"
                android:drawableStart="@drawable/ic_baseline_delete_outline_24"
                android:drawablePadding="0dp"
                android:text="@string/task_btn_delete_soft_text"
                android:textAllCaps="false"
                android:textColor="?attr/colorError"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/task_tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/task_tv_title_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/task_btn_delete" />

            <EditText
                android:id="@+id/task_et_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/task_et_title_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLines="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_tv_title"
                tools:targetApi="O"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/task_tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/task_tv_description_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_et_title" />

            <EditText
                android:id="@+id/task_et_description"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:gravity="start|top"
                android:hint="@string/task_et_description_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textColorHighlight="?attr/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/task_cb_completed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_tv_description"
                tools:targetApi="O"
                tools:text="@tools:sample/lorem/random" />

            <CheckBox
                android:id="@+id/task_cb_completed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/task_cb_completed_text"
                app:layout_constraintBottom_toTopOf="@id/task_btn_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/task_btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="?attr/colorSecondary"
                android:text="@string/task_btn_cancel_text"
                android:textColor="?attr/textWhiteColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/task_btn_save"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/task_btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/task_btn_save_text"
                android:textColor="?attr/textWhiteColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/task_btn_cancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/task_pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="?attr/colorPrimaryDark"
        android:elevation="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="?android:attr/progressBarStyleLarge" />

</androidx.constraintlayout.widget.ConstraintLayout>