<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="7dp"
    card_view:contentPadding="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/item_task_ib_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/item_task_ib_share_content_description"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_share_24"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_task_tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/item_task_tv_status_uncompleted_text"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="@id/item_task_tv_title"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_task_tv_status_deleted"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/item_task_tv_status_deleted_text"
            android:textColor="?attr/colorError"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="@+id/item_task_tv_status"
            card_view:layout_constraintStart_toEndOf="@+id/item_task_tv_status"
            card_view:layout_constraintTop_toTopOf="@+id/item_task_tv_status" />

        <TextView
            android:id="@+id/item_task_tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="5dp"
            android:textColor="?attr/textDarkColor"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/item_task_ib_share"
            card_view:layout_constraintTop_toBottomOf="@+id/item_task_tv_status"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/item_task_tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_task_tv_title"
            android:maxLines="8"
            android:ellipsize="end"
            android:padding="5dp"
            android:textColor="?attr/textDarkColor"
            tools:text="@tools:sample/lorem/random"
            card_view:layout_constraintStart_toStartOf="@+id/item_task_tv_title"
            card_view:layout_constraintEnd_toEndOf="@id/item_task_tv_title"
            card_view:layout_constraintTop_toBottomOf="@+id/item_task_tv_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
